# Music-Saver

./: .gitconfig_global  .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.ru.md  all_code_to_1_file.py  build.ps1  main.py  pyproject.toml  requirements.txt  vk_music_saver.spec
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
docs/: GROWTH_PLAN_RU.md
docs/marketing/: POST_HABR_DRAFT.md  POST_PIKABU_DRAFT.md  RELEASE_NOTES_v1.0.0.md
docs/media/: README.md
resources/: app.default.toml
src/: app_config.py  app_controller.py  config.py
src/database/: db_manager.py  repositories.py
src/domain/: models.py  tagger.py
src/services/: binary_manager.py  settings_manager.py
src/services/download/: ffmpeg_service.py  simple_http_service.py
src/services/telegram/: telegram_service.py
src/services/vk/: auth_service.py  driver_factory.py  link_decoder.py  parser_service.py
src/services/yandex/: download_service.py  parser_service.py  simple_download_service.py
src/ui/: app_window.py  design_system.py  i18n.py
src/ui/components/: log_panel.py  playlist_view.py  primitives.py  sidebar.py
src/ui/views/: dashboard_view.py  downloader_view.py  logs_view.py  telegram_view.py
src/ui/wizard/: setup_wizard.py
src/utils/: logger.py
utils/: icon_gen.py
