[project]
name = "vk-music-saver"
version = "1.0.0"
description = "Windows desktop app for moving music from VK and Yandex into a tagged local offline library."
readme = "README.en.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2,<6",
    "mutagen>=1.47,<2",
    "pyTelegramBotAPI>=4.16,<5",
    "pyinstaller>=6.0,<7",
    "requests>=2.31,<3",
    "selenium>=4.10,<5",
    "tomli>=2.0.1,<3; python_version < '3.11'",
    "yandex-music>=2.1,<3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]